istio/traffic-shifting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8spoc
spec:
  hosts:
  - "*"
  gateways:
  - k8spoc-gateway
  http:
  - match:
    - uri:
        exact: /ev/getCustomerDetails
    route:
    - destination:
        host: k8spoc
        port:
          number: 8081
      weight: 50
    - destination:
        host: k8spoc-v2
        port:
          number: 8081
      weight: 50
